fix(styles): menu-container grid spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -168,8 +168,8 @@ a:visited {
 	grid-column: 2 / -1;
 	display: grid;
 	grid-template-columns: 1fr;
-	align-items: center;
-	justify-items: center;
+	/* align-items: center; */
+	/* justify-items: center; */
 	gap: var(--spacing-md);
 }
 
